added graphql landing page

--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-	 "prod": "next build && next start"
+    "prod": "next build && next start"
   },
   "dependencies": {
+    "apollo-server-core": "^3.6.1",
     "apollo-server-micro": "^3.6.1",
     "mongodb": "^4.1.3",
     "next": "latest",
