--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "apollo-server-core": "^3.6.1",
     "apollo-server-micro": "^3.6.1",
+    "micro-cors": "^0.1.1",
     "mongodb": "^4.1.3",
     "next": "latest",
     "react": "^17.0.2",
