--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@types/mongodb": "^4.0.7",
     "@types/react": "^17.0.38",
+    "sass": "^1.48.0",
     "typescript": "^4.5.4"
   }
 }
