--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,4 +16,4 @@ jobs:
     steps:
     - name: Create the pull request
       run: |
-        curl -H 'Accept: application/vnd.github.v3+json' 'https://github.com/repos/Konseyy/portfolio/pulls?head=dev&base=main&title=Automatic%20pull%20request&body=Automatically%20generated%20pull%20request&draft=true&maintainer_can_modify=true'
+        curl -X POST -H 'Accept: application/vnd.github.v3+json' 'https://github.com/repos/Konseyy/portfolio/pulls?head=dev&base=main&title=Automatic%20pull%20request&body=Automatically%20generated%20pull%20request&draft=true&maintainer_can_modify=true'
