--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,4 +18,13 @@ jobs:
       env:
           api_key: ${{ secrets.API_TOKEN }}
       run: |
-        curl -X POST -H 'Accept: application/vnd.github.v3+json Authorization: "${api_key}"' -d '{"head":"dev","base":"main","title":"Automatic pull request","body": "Automatically generated pull request", "draft":"true","maintainer_can_modify:"true"}' 'https://api.github.com/repos/Konseyy/portfolio/pulls'
+        curl --request POST \
+        --url https://api.github.com/repos/konseyy/portfolio/pulls \
+        --header 'authorization: token ${{ secrets.GITHUB_TOKEN }}' \
+        --header 'content-type: application/json' \
+        --data '{
+        "head" : "dev",
+        "base" :"main",
+        "title": "Automated pull request}",
+        "body": "This pull request was automatically created by the GitHub Action workflow **${{ github.workflow }}**. \n\n The commit hash was: _${{ github.sha }}_."
+        }' \
