--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "mongodb": "^4.1.3",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "socket.io": "^4.4.1",
+    "socket.io-client": "^4.4.1"
   },
   "devDependencies": {
     "@types/mongodb": "^4.0.7",
