--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,7 @@
 		{
 			"source": "/api/(.*)",
 			"headers": [
+				{ "key": "Access-Control-Allow-Credentials", "value": "true" },
 				{ "key": "Access-Control-Allow-Origin", "value": "*" },
 				{
 					"key": "Access-Control-Allow-Methods",
